Fix loading issues on IOS

--- a/www-src/main.scss
+++ b/www-src/main.scss
@@ -44,6 +44,13 @@ button {
 
 }
 
+#BPSPVideo {
+  position:fixed;
+  top:0;
+  left:0;
+  z-index: 0;
+}
+
 
 .guide {
 
